tests/negative/error_recovery1.toit
// Copyright (C) 2019 Toitware ApS. All rights reserved.

from_module := 499
